testsuite/tests/typecheck/should_fail/tcfail133.stderr

tcfail133.hs:2:61: warning:
    -XDatatypeContexts is deprecated: It was widely considered a misfeature, and has been removed from the Haskell language.

tcfail133.hs:68:7: error:
    Ambiguous type variable ‘r0’ arising from a use of ‘show’
    prevents the constraint ‘(Show r0)’ from being solved.
    Probable fix: use a type annotation to specify what ‘r0’ should be.
    These potential instances exist:
      instance Show Module -- Defined in ‘GHC.Show’
      instance Show Ordering -- Defined in ‘GHC.Show’
      instance Show TrName -- Defined in ‘GHC.Show’
      ...plus 28 others
      (use -fprint-potential-instances to see them all)
    In the expression: show
    In the expression: show $ add (One :@ Zero) (One :@ One)
    In an equation for ‘foo’:
        foo = show $ add (One :@ Zero) (One :@ One)

tcfail133.hs:68:14: error:
    No instance for (AddDigit (Zero :@ (One :@ One)) One r0)
      arising from a use of ‘add’
    In the second argument of ‘($)’, namely
      ‘add (One :@ Zero) (One :@ One)’
    In the expression: show $ add (One :@ Zero) (One :@ One)
    In an equation for ‘foo’:
        foo = show $ add (One :@ Zero) (One :@ One)
